Correcting alignment of main navigation

--- a/bakerydemo/static/css/main.css
+++ b/bakerydemo/static/css/main.css
@@ -204,6 +204,9 @@ nav {
   margin: 15px 0 5px;
   display: none;
 }
+#main-navigation {
+  padding-left: 0;
+}
 
 @media (min-width: 768px) {
   nav {
